Update core/src/main/java/com/github/starnowski/posmulten/hibernate/core/connections/CurrentTenantPreparedStatementSetterInitiator.java
Co-authored-by: sonatype-lift[bot] <37194012+sonatype-lift[bot]@users.noreply.github.com>